--- a/Resume 6.html
+++ b/Resume 6.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Resume 6</title>
-    <link rel="stylesheet" href="/Resume 11/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 <body>
     <header id="heading">
-        <img src="Images copy/robot-image.jpeg" alt="robotimage" id="image">
+        <img src="Images/robot-image.jpeg" alt="robotimage" id="image">
         <h1>Scanlon Botha</h1>
         <p>An enthusiastic web developer with a passion for creating innovative mobile applications that influence society. In love with the power of analysing and presenting data to help people make meaningful decisions. A curious person who loves learning new things every day.</p>
     </p>
@@ -99,9 +99,9 @@
 
 
 
-<a href="https://www.facebook.com/"> <img src="Images copy/pngkit_facebook-logo-png_4506.png"width=70px class="icons-image"></a> 
-<a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"> <img src="Images copy/372102050_LINKEDIN_ICON_1080.png"width=80px class="icons-image"></a>
-<a href="https://mail.google.com/mail/u/0/#inbox"> <img src="Images copy/gmail-logo-1-150x150.png"width=70Spx class="icons-image"></a>
+<a href="https://www.facebook.com/"> <img src="Images/pngkit_facebook-logo-png_4506.png"width=70px class="icons-image"></a> 
+<a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"> <img src="Images/372102050_LINKEDIN_ICON_1080.png"width=80px class="icons-image"></a>
+<a href="https://mail.google.com/mail/u/0/#inbox"> <img src="Images/gmail-logo-1-150x150.png"width=70Spx class="icons-image"></a>
 
 </p>
 
